--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,20 @@
-alabaster==0.7.11
+alabaster==0.7.12
 asn1crypto==0.24.0
-astroid==1.6.5
-Babel==2.6.0
+astroid==2.2.5
+attrs==19.1.0
+Babel==2.7.0
 backcall==0.1.0
-bleach==2.1.3
-certifi==2018.4.16
-cffi==1.11.5
+bleach==3.1.0
+certifi==2019.6.16
+cffi==1.12.3
 chardet==3.0.4
-cloudpickle==0.5.3
-colorama==0.3.9
-cryptography==2.2.2
-decorator==4.3.0
+cloudpickle==1.1.1
+colorama==0.4.1
+cryptography==2.7
+decorator==4.4.0
+defusedxml==0.6.0
 dj-database-url==0.4.2
-Django==2.0.6
+Django==2.2.1
 django-appconf==1.0.2
 django-braces==1.10.0
 django-classy-tags==0.8.0
@@ -46,79 +48,91 @@ djangocms-video==2.0.4
 djangorestframework==3.9.4
 docutils==0.14
 easy-thumbnails==2.5
-entrypoints==0.2.3
+entrypoints==0.3
 ExifRead==2.1.2
 factory-boy==2.10.0
 Faker==0.8.10
 gunicorn==19.7.1
 html5lib==1.0.1
-idna==2.7
-imagesize==1.0.0
-ipykernel==4.8.2
-ipython==6.4.0
+idna==2.8
+imagesize==1.1.0
+ipykernel==5.1.1
+ipython==7.5.0
 ipython-genutils==0.2.0
-isort==4.3.4
-jedi==0.12.0
-Jinja2==2.10
-jsonschema==2.6.0
-jupyter-client==5.2.3
+isort==4.3.20
+jedi==0.13.3
+Jinja2==2.10.1
+jsonschema==3.0.1
+jupyter-client==5.2.4
 jupyter-core==4.4.0
-lazy-object-proxy==1.3.1
-MarkupSafe==1.0
+keyring==18.0.0
+lazy-object-proxy==1.4.1
+MarkupSafe==1.1.1
 mccabe==0.6.1
-mistune==0.8.3
-nbconvert==5.3.1
+mistune==0.8.4
+nbconvert==5.5.0
 nbformat==4.4.0
-notebook==5.5.0
-numpydoc==0.8.0
-olefile==0.45.1
-packaging==17.1
+notebook==5.7.8
+numpydoc==0.9.1
+olefile==0.46
+packaging==19.0
 pandocfilters==1.4.2
-parso==0.2.1
-pickleshare==0.7.4
+parso==0.4.0
+pickleshare==0.7.5
 pilkit==2.0
-Pillow==5.0.0
-prompt-toolkit==1.0.15
-psutil==5.4.6
+Pillow==6.0.0
+prometheus-client==0.6.0
+prompt-toolkit==2.0.9
+psutil==5.6.2
 psycopg2==2.7.3.2
 py-moneyed==0.7.0
-pycodestyle==2.4.0
-pycparser==2.18
-pyflakes==2.0.0
+pycodestyle==2.5.0
+pycparser==2.19
+pyflakes==2.1.1
 pygame==1.9.4
-Pygments==2.2.0
-pylint==1.9.2
-pyOpenSSL==18.0.0
-pyparsing==2.2.0
-PySocks==1.6.8
-python-dateutil==2.7.3
-pytz==2017.3
-pywinpty==0.5.4
-pyzmq==17.0.0
-QtAwesome==0.4.4
-qtconsole==4.3.1
-QtPy==1.4.2
-requests==2.19.1
-rope==0.10.7
+Pygments==2.4.2
+pylint==2.3.1
+pyOpenSSL==19.0.0
+pyparsing==2.4.0
+pyrsistent==0.14.11
+PySocks==1.7.0
+python-dateutil==2.8.0
+pytz==2019.1
+pywin32==223
+pywinpty==0.5.5
+pyzmq==18.0.0
+QtAwesome==0.5.7
+qtconsole==4.5.1
+QtPy==1.7.1
+requests==2.22.0
+rope==0.14.0
 Send2Trash==1.5.0
 simplegeneric==0.8.1
-six==1.11.0
+six==1.12.0
 snowballstemmer==1.2.1
-Sphinx==1.7.5
-sphinxcontrib-websupport==1.1.0
-spyder==3.2.8
+Sphinx==2.1.0
+sphinxcontrib-applehelp==1.0.1
+sphinxcontrib-devhelp==1.0.1
+sphinxcontrib-htmlhelp==1.0.2
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.2
+sphinxcontrib-serializinghtml==1.1.3
+sphinxcontrib-websupport==1.1.2
+spyder==3.3.4
+spyder-kernels==0.5.0
 sqlparse==0.2.4
-terminado==0.8.1
-testpath==0.3.1
+terminado==0.8.2
+testpath==0.4.2
 text-unidecode==1.1
-tornado==5.0.2
+tornado==6.0.2
 traitlets==4.3.2
+typed-ast==1.3.4
 tzlocal==1.5.1
 Unidecode==0.4.21
-urllib3==1.23
+urllib3==1.24.2
 wcwidth==0.1.7
 webencodings==0.5.1
 websockets==3.2
-win-inet-pton==1.0.1
+win-inet-pton==1.1.0
 wincertstore==0.2
-wrapt==1.10.11
+wrapt==1.11.1
